OAK-301 : oak docu
Document steps around using Luke

git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/oak/trunk@1636810 13f79535-47bb-0310-9956-ffa450edef68